[package]
name = "suckless_hn"
version = "0.1.0"
authors = ["Michael <michael@porkbrain.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
env_logger = "0.8"
fallible-iterator = "0.2"
futures = "0.3"
handlebars = "3.5"
lazy_static = "1.4"
log = "0.4"
regex = "1.4"
reqwest = { version = "0.10", features = ["json"] }
# we don't verify ssl because aws s3 ssl only applies to bucket names which
# don't contain dots in their name as the cert is not wildcarded to arbitrary
# numbers of subdomains
rust-s3 = { version = "0.27.0-beta5", features = ["no-verify-ssl"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
# not 0.3 due to https://github.com/seanmonstar/reqwest/issues/1060
tokio = { version = "0.2", features = ["fs", "rt-core", "macros"] }

[dependencies.rusqlite]
version = "0.24"
# Bundles the necessary libs.
# https://github.com/rusqlite/rusqlite#notes-on-building-rusqlite-and-libsqlite3-sys
features = ["bundled", "backup"]

[dev-dependencies]
names = "0.11"
rand = "0.7"
