[package]
name = "sucklesshn"
version = "2.0.0"
authors = ["porkbrain <git@porkbrain.com>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
env_logger = "0.9"
fallible-iterator = "0.2"
futures = "0.3"
handlebars = "4.2"
lazy_static = "1.4"
log = "0.4"
regex = "1.4"
reqwest = { version = "0.11", features = ["json"] }
# we don't verify ssl because aws s3 ssl only applies to bucket names which
# don't contain dots in their name as the cert is not wildcarded to arbitrary
# numbers of subdomains
rust-s3 = { version = "0.27.0-beta11", features = ["no-verify-ssl"] }
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
# not 0.3 due to https://github.com/seanmonstar/reqwest/issues/1060
tokio = { version = "1.4", features = ["fs", "macros", "rt-multi-thread"] }

[dependencies.rusqlite]
version = "0.25"
# Bundles the necessary libs.
# https://github.com/rusqlite/rusqlite#notes-on-building-rusqlite-and-libsqlite3-sys
features = ["bundled"]

[dev-dependencies]
names = "0.13"
rand = "0.8"
